--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@
         </div><!-- /.infographics -->
 
         <div class="advice">
-
+          <h2 class="advice__title">Оставьте заявку на консультацию</h2>
           <div class="container-article">
-            <h2 class="advice__title">Консультация</h1>
-            <p class="advice__content">Text</p>
-            <p class="advice__content">Text</p>
+            <p class="advice__content">Это бесплатно</p>
+            <p class="advice__content">Мы перезвоним в рабочее время</p>
+            <p class="advice__content">Расскажем о наших фильтрах и <strong>патентах</strong></p>
+            <p class="advice__content">И подарим бесплатное сервисное обслуживание на год!</p>
           </div>
-          <div class="container-article">
+          <div class="container-article container-article--form">
             <form class="advice__form" id="form-consultation" action="">
               <div class="form-group">
                 <label class="label-first" for="first-name">Имя</label>
@@ -81,12 +82,12 @@
               </div>
               <div class="form-group">
                 <label class="label-two" for="tel">Телефон</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Ваш телефон">
+                <input type="tel" class="form-control" id="tel" placeholder="Телефон">
               </div>
             </form>
           </div>
           <div class="button-wrapper" form="form-consultation">
-            <button type="submit" class="btn btn-default btn--form">ОБРАТНЫЙ ЗВОНОК</button>
+            <button type="submit" class="btn btn-default btn--form">ОТПРАВИТЬ</button>
           </div>
 
         </div><!-- /.advice -->
