--- a/index.html
+++ b/index.html
@@ -52,15 +52,12 @@
           </div>
         </div>
 
-        <div class="infographics">
+        <div class="infographics fadein-post">
           <!-- <h2 class="infographics__title"></h2> -->
 
           <div class="infographics-wrapper">
 
-            <picture>
-              <source media="(min-width: 768px)" srcset="img/infographics/infographic-block-desctop.png">
-              <img src="img/infographics/infographic-block-mobile.png" alt="Инфографика">
-            </picture>
+            <img src="img/infographics/infographic-block-desctop-variable-3.png" alt="Инфографика">
 
           </div>
 
@@ -150,7 +147,7 @@
           <div class="footer__links">
             <h4 class="footer__links-title">Важная информация</h4>
             <ul>
-              <li><a href="#">Договор оферта</a></li>
+              <li><a href="contract-offer.html">Договор оферта</a></li>
               <li><a href="certificate-of-quality.html">Сертификаты качества</a></li>
               <li><a href="privacy-policy.html">Политика конфиденциальности</a></li>
             </ul>
